# online_fgo_core

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: FindGeographicLib.cmake  online_fgo_coreConfig.cmake.in
docs/: FGOLocalizationBase.md  ISAM2_CHEAT_SHEET.md  ISAM2_GP_PRIORS_UPDATE_SUMMARY.md  ISAM2_TUTORIAL.md  ISAM2_VISUAL_REFERENCE.md  KIMERA_INTEGRATION_IMPLEMENTATION_SUMMARY.md  KIMERA_INTEGRATION_PLAN.md  KIMERA_INTEGRATION_QUICK_REFERENCE.md  KIMERA_INTEGRATION_SKELETON_SUMMARY.md  KIMERA_NON_KEYFRAME_BUFFERING.md  KIMERA_NON_KEYFRAME_BUFFERING_CHANGES.md  KIMERA_NON_KEYFRAME_BUFFERING_QUICK_GUIDE.md  README_ISAM2_DOCS.md
include/online_fgo_core/: FGOLocalizationBase.h
include/online_fgo_core/data/: Buffer.h  DataTypesFGO.h  DataTypesMeasurement.h
include/online_fgo_core/factor/: FactorType.h  FactorTypeID.h
include/online_fgo_core/factor/gnss/: DDCpFactor.h  DDPrDrFactor.h  DrFactor.h  GPInterpolatedDDCpFactor.h  GPInterpolatedDDPrDrFactor.h  GPInterpolatedDDPrFactor.h  GPInterpolatedDrFactor.h  GPInterpolatedGPSFactor.h  GPInterpolatedPVTFactor.h  GPInterpolatedPrDrFactor.h  GPInterpolatedPrFactor.h  GPInterpolatedTDCPFactorNormalCP.h  GPInterpolatedTDCpFactor.h  GPSFactor.h  PVTFactor.h  PrDrFactor.h  PrFactor.h  PrFactorWeighted.h  TripDCpFactor.h
include/online_fgo_core/factor/inertial/: MagFactor_eRb.h
include/online_fgo_core/factor/motion/: ConstAccelerationFactor.h  ConstAngularRateFactor.h  ConstDriftFactor.h  ConstVelPriorFactor.h  GPPriorBase.h  GPSingerPrior.h  GPSingerPriorFull.h  GPWNOAPrior.h  GPWNOJPrior.h  GPWNOJPriorFull.h
include/online_fgo_core/factor/odometry/: BetweenFactor.h  GPInterpolatedDoublePose3BetweenFactor.h  GPInterpolatedNavAttitudeFactor.h  GPInterpolatedNavPoseFactor.h  GPInterpolatedNavVelocityFactor.h  GPInterpolatedSinglePose3BetweenFactor.h  NavAttitudeFactor.h  NavPoseFactor.h  NavVelocityFactor.h
include/online_fgo_core/factor/visual/: GPInterpolatedInvDepthFactor.h  GPInterpolatedProjectDepthOnlyFactor.h  GPInterpolatedProjectFactor.h  GPInterpolatedSingleProjectDepthOnlyFactor.h  ProjectDepthOnlyFactor.h
include/online_fgo_core/gnss_fgo_param/: GNSSFGOParams.h
include/online_fgo_core/graph/: GraphBase.h  GraphSensorCentric.h  GraphTimeCentric.h  GraphTimeCentricKimera.h  GraphUtils.h
include/online_fgo_core/graph/param/: GraphParams.h
include/online_fgo_core/integration/: KimeraIntegrationInterface.h
include/online_fgo_core/integrator/: CorrevitIntegrator.h  IntegratorBase.h  LIOIntegrator.h  VisualIntegratorBase.h
include/online_fgo_core/integrator/param/: IntegratorParams.h
include/online_fgo_core/interface/: ApplicationInterface.h  LoggerInterface.h  ParameterInterface.h  PublisherInterface.h  TimeInterface.h
include/online_fgo_core/model/gp_interpolator/: GPInterpolatorBase.h
include/online_fgo_core/sensor/: SensorCalibrationManager.h
include/online_fgo_core/sensor/sensor/: SensorCalibrationManager.h
include/online_fgo_core/solver/: BatchFixedLagSmoother.h  IncrementalFixedLagSmoother.h
include/online_fgo_core/utils/: FGOParameter.h  GNSSUtils.h  NavigationTools.h  Pose3Utils.h
src/: FGOLocalizationBase.cpp
src/graph/: GraphBase.cpp  GraphTimeCentric.cpp  GraphTimeCentricKimera.cpp
src/integration/: KimeraIntegrationInterface.cpp
src/integrator/: CorrevitIntegrator.cpp  IntegratorBase.cpp  LIOIntegrator.cpp
src/interface/: ApplicationInterface.cpp  LoggerInterface.cpp  ParameterInterface.cpp
src/solver/: BatchFixedLagSmoother.cpp  FixedLagSmoother.cpp  IncrementalFixedLagSmoother.cpp
src/utils/: Pose3Utils.cpp
tests/: CMakeLists.txt  README.md  README_KIMERA_SIMPLE_TEST.md  TEST_DOCUMENTATION.md  test_application_interface.cpp  test_equivalence.cpp  test_graph_base.cpp  test_graph_time_centric.cpp  test_graph_time_centric_kimera.cpp  test_kimera_integration_interface.cpp  test_kimera_simple_integration.cpp  test_logger_interface.cpp  test_parameter_interface.cpp  test_params.yaml  test_time_interface.cpp
